# simple-ports-scanner

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
example/: test.toml
src/: cli.rs  config.rs  display.rs  icmp_detector.rs  main.rs  scanner.rs  toml_parser.rs
src/config/: ports.rs
src/icmp_detector/: packet.rs
src/scanner/: packet.rs
