[package]
name = "syn_port_scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
indexmap = "2.2.6"
indicatif = "0.17.8"
ipnet = "2.9.0"
lazy_static = "1.4.0"
pnet = "0.34.0"
rand = "0.8.5"
toml = "0.8.12"
